--- a/Sang.LibraryNMS/Sang.LibraryNMS.csproj
+++ b/Sang.LibraryNMS/Sang.LibraryNMS.csproj
@@ -22,4 +22,16 @@
     <PackageReference Include="Sang.AliyunUrlHMAC" Version="1.0.1" />
   </ItemGroup>
 
+	<ItemGroup>
+
+		<None Include="..\LICENSE.txt">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+		<None Include="..\README.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+	</ItemGroup>
+
 </Project>
