--- a/Sang.LibraryNMS/Properties/launchSettings.json
+++ b/Sang.LibraryNMS/Properties/launchSettings.json
@@ -1,12 +1,12 @@
 {
   "profiles": {
-    "CefisLibraryNMS": {
+    "Sang.LibraryNMS": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:54145;http://localhost:54146"
+      "applicationUrl": "https://localhost:14901;http://localhost:14902"
     }
   }
 }
